px4_ws/logs/rgbd_slam/build.make.007.log.stderr
/home/odroid/MAV-Project/px4_ws/src/rgbd_slam/src/main.cpp: In function 'int main(int, char**)':
/home/odroid/MAV-Project/px4_ws/src/rgbd_slam/src/main.cpp:283:39: error: taking address of temporary [-fpermissive]
     logger.updatePos(&(logger.getLpe()));
                                       ^
/home/odroid/MAV-Project/px4_ws/src/rgbd_slam/src/main.cpp:283:40: error: no matching function for call to 'RosHandler::updatePos(Eigen::Matrix4f*)'
     logger.updatePos(&(logger.getLpe()));
                                        ^
/home/odroid/MAV-Project/px4_ws/src/rgbd_slam/src/main.cpp:283:40: note: candidate is:
In file included from /home/odroid/MAV-Project/px4_ws/src/rgbd_slam/src/main.cpp:9:0:
/home/odroid/MAV-Project/px4_ws/src/rgbd_slam/include/RosHandler.h:16:7: note: void RosHandler::updatePos(Eigen::Matrix4f&)
  void updatePos(Matrix4f&);
       ^
/home/odroid/MAV-Project/px4_ws/src/rgbd_slam/include/RosHandler.h:16:7: note:   no known conversion for argument 1 from 'Eigen::Matrix4f* {aka Eigen::Matrix<float, 4, 4>*}' to 'Eigen::Matrix4f& {aka Eigen::Matrix<float, 4, 4>&}'
make[2]: *** [CMakeFiles/rgbd_slam.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/rgbd_slam.dir/all] Error 2
make: *** [all] Error 2
